--- a/_posts/tech/2019-07-29-layui-5ilhk.md
+++ b/_posts/tech/2019-07-29-layui-5ilhk.md
@@ -50,22 +50,22 @@ data.spec_attr.push({
 #### layui书册：[链接](https://www.layui.com/doc/modules/laytpl.html)
 ```
 <script id="tpl_spec_attr" type="text/html">
-  {{#  layui.each(d.spec_attr, function(index, value){ }}
+  {% raw %}{{#  layui.each(d.spec_attr, function(index, value){ }}{% endraw %}
     <div class="spec-group-item" data-index="{{ index }}" data-group-id="{{ value.group_id }}">
       <div class="spec-group-name">
         <span>{{ value.group_name }}</span>
         <i class="spec-group-delete layui-icon" title="点击删除">ဇ</i>
       </div>
       <div class="spec-list layui-clear">
-        {{# layui.each(value.spec_items, function(key, item){ }}
+        {% raw %}{{# layui.each(value.spec_items, function(key, item){ }}{% endraw %}
         <div class="spec-item layui-fl" data-item-index="{{ key }}">
           <span>{{ item.spec_value }}</span>
           <i class="spec-item-delete layui-icon" title="点击删除">ဇ</i>
         </div>
-        {{# }); }}
+        {% raw %}{{# }); }}{% endraw %}
       </div>
     </div>
-  {{#  }); }}
+  {% raw %}{{#  }); }}{% endraw %}
 </script>
 var spec_attr = $('#tpl_spec_attr').html(),spec_attr_view = $('.spec-attr');
 laytpl(spec_attr).render(data, function(html){
